[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pyright]
venvPath = "."
venv = ".venv"

[project]
name = "umap-cam"
version = "0.2.0"
dependencies = ["jax"]
readme = "README.md"

[project.optional-dependencies]
test = ["scikit-learn", "matplotlib"]
cuda12 = ["jax[cuda12]"]
polyfill = ["pynndescent"]
